package individualprofile;

option java_package = "es.tid.bdp.profile.data";
option java_outer_classname = "ProfileProtocol";

message UserNavigation {
  required string userId = 1;
  required string url = 2;
  required string date = 3;
}

message CategoryInformation {
  required string userId = 1;
  required string url = 2;
  required string date = 3;
  required int64 count = 4;
  repeated string categories = 5;
}

message CategoryCount {
  required string name = 1;
  required int64 count = 2;
}

message UserProfile {
  required string userId = 1;
  required string date = 2;
  repeated CategoryCount counts = 3;
}
